Closed
Bug 756454
Opened 14 years ago
Closed 14 years ago
[Azure] Use 2D texture for gradient realizations
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: bas.schouten, Assigned: bas.schouten)
Details
Attachments
(1 file)
|
3.64 KB,
patch
|
jrmuizel
:
review+
|
Details | Diff | Splinter Review |
We currently use a 1D texture for gradient realizations and pretend in the shader it's 2D. This generates an Error from the D3D10 debug layer (although it appears to work fine). 1D textures are not supported in SM3.0 (i.e. non-D3D10 hardware), and since we're currently allowing D3D9 card users to force D2D the easiest solution is to use a 4096x1 2D texture. This patch makes that happen.
Attachment #625095 -
Flags: review?(jmuizelaar)
Updated•14 years ago
|
Attachment #625095 -
Flags: review?(jmuizelaar) → review+
| Assignee | ||
Comment 1•14 years ago
|
||
Comment 2•14 years ago
|
||
Sorry, had to back out the push for Win debug crashes:
https://tbpl.mozilla.org/?tree=Mozilla-Inbound&rev=a693c64dc64e
https://hg.mozilla.org/integration/mozilla-inbound/rev/b4e62a1e9809
| Assignee | ||
Comment 3•14 years ago
|
||
Comment 4•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
You need to log in
before you can comment on or make changes to this bug.
Description
•