Bug 756454: User 2D texture for gradient realizations. r=jrmuizel